2006-08-24 Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #325613

	* gui/dialogs/recurrence-page.c (make_recur_month_menu) :
	Translator comment added.

2006-09-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #334692
	
	* gui/e-week-view.c: (e_week_view_on_scroll), (tooltip_destroy),
	(tooltip_event_cb), (e_week_view_on_text_item_event): Remove the
	timers that are left out when using scroll. They seem to trigger
	crashes.

2006-09-21  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #354775
	
	* gui/calendar-component.c: (create_component_view): Fix to restore
	the pane position.

2006-09-18  Matthew Barnes  <mbarnes@redhat.com>

	Fixes #351332

	* gui/cal-search-bar.c:
	* gui/e-cal-model-tasks.h:
	* gui/e-calendar-view.h:
	* gui/gnome-cal.h:
	* gui/dialogs/memo-page.h:
	Fix implicit function declarations.

2006-09-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #352450

	* gui/calendar-commands.c:
	* gui/e-day-view-main-item.c:
	* gui/e-day-view-top-item.c:
	* gui/e-meeting-list-view.c:
	* gui/e-meeting-time-sel-item.c:
	* gui/e-meeting-time-sel.c:
	* gui/e-week-view-event-item.c:
	Replace deprecated GLib and GDK function calls.

2006-09-11  Chenthill Palanisamy  <pchenthill@novell.com>
	
	Fixes #344276
	* gui/e-cal-component-memo-preview.c: (write_html): made 
	the memo preview work fine with special char.
	Committing on behalf of Arvind <sa.phoenix@gmail.com>.

2006-09-08  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #343409
	* gui/e-select-names-editable.c:
	(e_select_names_editable_get_emails),
	(e_select_names_editable_get_name),
	(e_select_names_editable_get_names): Reverting the 
	fix for the bug 320101 as it breaks delegation feature.
	* gui/e-meeting-list-view.c: (attendee_edited_cb): copy
	the delfrom parameter from the attendee being edited.							   

2006-09-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #353763
	* gui/dialogs/memo-page.c: (sensitize_widgets):